<resources>
    <string name="app_name">МГУТУ</string>

    <string name="navigation_drawer_open">Открыть выезжающее меню</string>
    <string name="navigation_drawer_close">Закрыть выезжающее меню</string>

    <string name="action_settings">Настройки</string>
    <string name="action_quit">Выйти</string>
    <string name="action_normal">Стандартный вид</string>
    <string name="action_simple">Только текст</string>
    <string name="action_menu">Меню</string>
    <string name="action_fave">Сохранить</string>

    <string name="dialog_msg">Удалить выбранную запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="action_clear">Очистить</string>

    <string-array name="extra_array">
        <item>Оплата обучения</item>
        <item>Стратегия развития</item>
        <item>Значимые события</item>
        <item>Журнал Университетская жизнь</item>
        <item>Видео Университета</item>
        <item>Печатные издания Университета</item>
        <item>Кластер непрерывного казачьего образования</item>
    </string-array>
</resources>
