<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/messageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/dialog_msg"
        android:textAppearance="?android:attr/textAppearanceLarge">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/buttonAgree"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/yes"
            android:layout_weight="0.35" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/buttonDisagree"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/no"
            android:layout_weight="0.35" />

        <Space
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.15" />
    </LinearLayout>
</LinearLayout>